k8s-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-service
spec:
  hosts:
    - '*'
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /auth/
      rewrite:
        uri: /
      route:
        - destination:
            host: auth-service.default.svc.cluster.local
            port:
              number: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: housing-service
spec:
  hosts:
    - '*'
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /housing/api/v1/
      rewrite:
        uri: /
      route:
        - destination:
            host: housing-service.default.svc.cluster.local
            port:
              number: 8082
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rental-service
spec:
  hosts:
    - '*'
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /rental/api/v1/
      rewrite:
        uri: /
      route:
        - destination:
            host: rental-service.default.svc.cluster.local
            port:
              number: 8083
