k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-service
spec:
  hosts:
    - '*'
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /auth/v1/
      rewrite:
        uri: /
      route:
        - destination:
            host: auth-service.default.svc.cluster.local
            port:
              number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: housing-service
spec:
  selector:
    app: housing-service
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: housing-service
spec:
  hosts:
    - '*'
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /housing/v1/
      rewrite:
        uri: /
      route:
        - destination:
            host: housing-service.default.svc.cluster.local
            port:
              number: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: rental-service
spec:
  selector:
    app: rental-service
  ports:
    - port: 8083
      targetPort: 8083
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rental-service
spec:
  hosts:
    - '*'
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /rental/v1/
      rewrite:
        uri: /
      route:
        - destination:
            host: rental-service.default.svc.cluster.local
            port:
              number: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
